WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55895
Destroying WorkerFileSystemCallbacksBridge on main thread results in ASSERT in WorkerContext::Observer::~Observer
https://bugs.webkit.org/show_bug.cgi?id=55895
Summary
Destroying WorkerFileSystemCallbacksBridge on main thread results in ASSERT i...
Adam Klein
Reported
2011-03-07 12:27:23 PST
Kinuko is still trying to track down where this is happening, but it seems to be triggerable by running fast/filesystem/workers/file-from-file-entry-sync.html. See Chromium try job failure:
http://build.chromium.org/p/tryserver.chromium/builders/mac/builds/15549/steps/ui_tests/logs/WorkerFileSystemFileFromFileEntrySyncTest
So far, only triggered on Mac, but no reason to think this is platform-specific.
Attachments
Patch
(1.72 KB, patch)
2011-03-08 17:47 PST
,
Kinuko Yasuda
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Klein
Comment 1
2011-03-07 15:00:16 PST
This doesn't seem to be specific to the file-from-file-entry-sync test. Here's the same failure in another test:
http://build.chromium.org/p/tryserver.chromium/builders/mac/builds/16102/steps/ui_tests/logs/FileWriterSyncTruncateExtend
Kinuko Yasuda
Comment 2
2011-03-08 17:47:15 PST
Created
attachment 85118
[details]
Patch
David Levin
Comment 3
2011-03-08 17:54:42 PST
Comment on
attachment 85118
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=85118&action=review
> Source/WebKit/chromium/ChangeLog:11 > + (this could happen before or after the runTaskOnWorkerThread) do
s/do/does/
Kinuko Yasuda
Comment 4
2011-03-08 19:15:39 PST
Committed
r80617
: <
http://trac.webkit.org/changeset/80617
>
WebKit Review Bot
Comment 5
2011-03-10 02:28:53 PST
http://trac.webkit.org/changeset/80617
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug