2011-03-08  Kinuko Yasuda  <kinuko@chromium.org>

Reviewed by David Levin.

        Destroying WorkerFileSystemCallbacksBridge on main thread results in ASSERT in WorkerContext::Observer::~Observer
        https://bugs.webkit.org/show_bug.cgi?id=55895

        * src/WorkerFileSystemCallbacksBridge.cpp:
        (WebKit::WorkerFileSystemCallbacksBridge::runTaskOnWorkerThread):
        Added stopObserving() so that releasing the bridge on the main thread
        (this could happen before or after the runTaskOnWorkerThread) does
        not cause the assertion error.


Canonical link: https://commits.webkit.org/70508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80617 268f45cc-cd09-0410-ab3c-d52691b4dbfc